Fix store locator radio button spacing

--- a/cartridges/app_storefront_base/cartridge/client/default/scss/storeLocator/_storeLocator.scss
+++ b/cartridges/app_storefront_base/cartridge/client/default/scss/storeLocator/_storeLocator.scss
@@ -21,7 +21,9 @@
 
     .store-details {
         display: block;
-        margin-left: 3.125em;
+        @include media-breakpoint-up(md) {
+            margin-left: 3.125em;
+        }
     }
 
     .striped {
